# elide-showcases

./: .gitignore  100K_MILESTONE_SUMMARY.md  ANALYSIS_EXECUTIVE_SUMMARY.md  BETA11_MIGRATION_GUIDE.md  BUILD_TOOLS_INDEX.md  BUILD_TOOLS_RESEARCH.md  BUSINESS_CASE_FRAMEWORKS.md  CHANGELOG.md  CLI_TOOLS_BY_CATEGORY.md  CONTRIBUTING.md  DATA_PROCESSING_LIBRARIES_RESEARCH.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  ELIDE_CONVERSION.md  ELITE_SHOWCASES_SUMMARY.md  FINAL_SESSION_SUMMARY.md  FRAMEWORKS_EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  KNOWN_ISSUES.md  MASSIVE_EXPANSION_SUMMARY.md  MASTER_CONVERSION_PLAN.md  NEW_SHOWCASES.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_REVIEW_LEARNINGS.md  PROGRESS.md  PROJECT_TYPES.md  README-ELIDE.md  README.md  REORGANIZATION_PLAN.md  REORGANIZATION_V2_PLAN.md  RESEARCH_SUMMARY.md  SHOWCASE_INDEX.md  TOP_300_MISSING_PACKAGES.md  TOP_3_DETAILED_SPECS.md  TOP_MISSING_PACKAGES.csv  WAVE_SUMMARY.md  WEB_FRAMEWORKS_SUMMARY.md  convert-to-beta11.sh  count_all.sh  elide-bytes.ts  elide-is-number.ts  (+10 more)
.github/: copilot-instructions.md
09-modern-typescript/: advanced-features.ts
10-real-world-example/: todo-api.ts
applications/: README.md  code-generator.ts  markdown-cli.ts  markdown-converter.ts  test.md
categories/: README.md
components/: COMPONENT_SUMMARY.md  README.md
conversions/: README.md
converted/: README.md
docs/: 100K_LOC_MILESTONE.md  AGENT_HANDOFF_PROMPT.md  BETA11_CONVERSION_PLAN.md  BETA11_GO_CHECKLIST.md  CLAUDE_CODE_GUIDELINES.md  CONVERSION_KNOWLEDGE_BASE.md  ELIDE_BUG_TRACKER.md  ELIDE_KNOWLEDGEBASE.md  ENHANCEMENT_PROCESS.md  GETTING_STARTED.md  HTTP_PR_GAP_ANALYSIS.md  MISSION_CONTROL.md  PERFORMANCE_BENCHMARKS.md  PHASE_2_PLAN.md  REALITY_CHECK_LABELS.md  SHIMS.md  SHOWCASES_OVERVIEW.md  SIMPLIFICATION_OPPORTUNITIES.md  VIRAL_PROJECTS_RESEARCH.md
examples/: README.md  (+2 more)
original/showcases/anomaly-detection-engine/: .env.example  .gitignore  CASE_STUDY.md  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
original/showcases/anomaly-detection-engine/api/: middleware.ts  routes.ts  server.ts  websocket.ts
original/showcases/anomaly-detection-engine/benchmarks/: accuracy-benchmark.ts  algorithm-comparison.ts  latency-benchmark.ts
original/showcases/anomaly-detection-engine/core/: alert-manager.ts  event-buffer.ts  model-manager.ts  scorer.ts
original/showcases/anomaly-detection-engine/examples/: business-metrics.ts  iot-monitoring.ts  security-threats.ts
original/showcases/anomaly-detection-engine/ml/: ensemble.py  isolation_forest.py  lof.py  one_class_svm.py  timeseries.py  trainer.py
original/showcases/anomaly-detection-engine/tests/: api-test.ts  integration-test.ts  ml-test.py
original/showcases/etl-pipeline-polyglot/: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
original/showcases/etl-pipeline-polyglot/api/: server.ts
original/showcases/etl-pipeline-polyglot/core/: pipeline.ts  schemas.ts
original/showcases/etl-pipeline-polyglot/python/: processors.py  validators.py
original/showcases/recommendation-engine/: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.json
original/showcases/recommendation-engine/api/: middleware.ts  routes.ts  server.ts
original/showcases/recommendation-engine/benchmarks/: latency-benchmark.ts
original/showcases/recommendation-engine/core/: ab-testing.ts  analytics-tracker.ts  cache-manager.ts  diversity-optimizer.ts  model-manager.ts  recommendation-engine.ts
original/showcases/recommendation-engine/examples/: ecommerce.ts
original/showcases/recommendation-engine/ml/: collaborative_filtering.py  matrix_factorization.py  train_all.py
original/showcases/wasm-polyglot-bridge/rust-wasm/: Cargo.toml
original/showcases/wasm-polyglot-bridge/rust-wasm/src/: image.rs  json.rs  lib.rs  math.rs  sorting.rs
(+9704 files in other folders)
