[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-detection-engine"
version = "1.0.0"
description = "Production-ready real-time anomaly detection with scikit-learn"
authors = [
    {name = "Elide Team", email = "team@elide.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=1.3.2",
    "numpy>=1.26.2",
    "scipy>=1.11.4",
    "pandas>=2.1.4",
    "statsmodels>=0.14.1",
    "pyod>=1.1.2",
    "joblib>=1.3.2",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "mypy>=1.7.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
