[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-pipeline-polyglot"
version = "1.0.0"
description = "ETL pipeline with Pydantic validation and pandas DataFrames"
authors = [
    {name = "Elide Team", email = "team@elide.dev"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.5.0",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "pyarrow>=14.0.1",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.12.0",
    "mypy>=1.7.1",
    "ruff>=0.1.8"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"
